# IT

./: .env  BD  Data_base  Dockerfile  Parser binance and bybit  Parser binance and bybit.py  Parser_binance_and_bybit.py  README.md  config.py  docker-compose.yml  entrypoint.py  entrypoint.sh  main.py  models  pyproject.toml  yoyo.ini
FastAPI/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
FastAPI/main/: main.py
FastAPI/models/: models.py
FastAPI/repositories/: repositories.py
FastAPI/services/: services.py
app/: config.py  main.py  repositories.py  services.py
migrations/: 20240925_01_cVP8O-currency.py  20240925_02_MXLPP-exchanger.py  20240925_03_n3Yea-currency-pair.py  20240925_04_kUOAr-currency-price.py  20241009_01_2JgLU-currency.py  20241009_02_6RNdc-exchanger.py  20241009_03_PNNF7-currency-pair.py  20241009_04_nZw8L-currency-price.py  20241014_01_i10RF-currency.py  20241014_02_9hS8q-exchanger.py  20241014_03_Cv2uS-currency-pair.py  20241014_04_1oLvj-currency-price.py
